champs non traduits des sorts

--- a/data/spells/abjuration-08-nsQvjNyg4Whw2mek.htm
+++ b/data/spells/abjuration-08-nsQvjNyg4Whw2mek.htm
@@ -5,7 +5,7 @@ Nom: Aura divine
 
 ------ Data ------
 AreasizeEN: 10-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 3 m
 TargetEN: allies in the area
 TargetFR: 
 ------ Description (en) ------
