--- a/data/spells/conjuration-02-3VxVbZqIRvpKkg3O.htm
+++ b/data/spells/conjuration-02-3VxVbZqIRvpKkg3O.htm
@@ -5,7 +5,7 @@ Nom: Infestation fongique
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
