--- a/data/spells/conjuration-03-tFKJCPvOQZxKq6ON.htm
+++ b/data/spells/conjuration-03-tFKJCPvOQZxKq6ON.htm
@@ -5,7 +5,7 @@ Nom: Singes fous
 
 ------ Data ------
 AreasizeEN: 5-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 1,5m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
