--- a/data/spells/enchantment-01-IkS3lDGUpIOMug7v.htm
+++ b/data/spells/enchantment-01-IkS3lDGUpIOMug7v.htm
@@ -5,7 +5,7 @@ Nom: Poussière féerique
 
 ------ Data ------
 AreasizeEN: 5-foot burst or more
-AreasizeFR: 
+AreasizeFR: explosion de 1,5 m ou plus
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
