--- a/data/spells/evocation-01-0H1ozccQGGFLUwFI.htm
+++ b/data/spells/evocation-01-0H1ozccQGGFLUwFI.htm
@@ -5,7 +5,7 @@ Nom: Cri de destruction
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>Your voice booms, smashing what's in front of you. Each creature and unattended object in the area takes 1d8 sonic damage. If you already dealt damage to an enemy this turn with a Strike or spell, increase the damage dice from this spell to d12s.</p>
 <hr />
