--- a/data/spells/evocation-01-Rn2LkoSq1XhLsODV.htm
+++ b/data/spells/evocation-01-Rn2LkoSq1XhLsODV.htm
@@ -5,7 +5,7 @@ Nom: Frappe de débris
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>A spray of heavy rocks flies through the air in front of you. The rubble deals [[/r 2d4 #bludgeoning]] bludgeoning damage to each creature in the area. Each creature must attempt a Reflex save.</p>
 <hr />
