--- a/data/spells/evocation-01-zul5cBTfr7NXHBZf.htm
+++ b/data/spells/evocation-01-zul5cBTfr7NXHBZf.htm
@@ -5,7 +5,7 @@ Nom: Éclair éblouissant
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You raise your religious symbol and create a blinding flash of light. Each creature in the area must attempt a Fortitude save.</p>
 <hr />
