--- a/data/spells/evocation-03-ytboJsyZEbE1MLeV.htm
+++ b/data/spells/evocation-03-ytboJsyZEbE1MLeV.htm
@@ -5,7 +5,7 @@ Nom: Avancée de la vague qui ne se brise pas
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You unleash a mighty wave from your hand that buffets back your foes. Each creature in the area must attempt a Fortitude saving throw. If a creature pushed by <em>unbreaking wave advance</em> would be pushed into a solid barrier or another creature, it stops at that point and takes 3d6 damage.</p>
 <hr />
