--- a/data/spells/evocation-04-kHyjQbibRGPNCixx.htm
+++ b/data/spells/evocation-04-kHyjQbibRGPNCixx.htm
@@ -5,7 +5,7 @@ Nom: Tempête de glace
 
 ------ Data ------
 AreasizeEN: 5-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 1,5m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
