--- a/data/spells/evocation-05-HMTloW1hvRFJ5Z2D.htm
+++ b/data/spells/evocation-05-HMTloW1hvRFJ5Z2D.htm
@@ -5,7 +5,7 @@ Nom: Obscurité dévorante
 
 ------ Data ------
 AreasizeEN: 10-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 3 m
 TargetEN: enemies in the area
 TargetFR: 
 ------ Description (en) ------
