--- a/data/spells/illusion-03-aZg3amDcrXz3cLCz.htm
+++ b/data/spells/illusion-03-aZg3amDcrXz3cLCz.htm
@@ -5,7 +5,7 @@ Nom: Visage terrifiant
 
 ------ Data ------
 AreasizeEN: 30-foot-radius emanation centered on you
-AreasizeFR: 
+AreasizeFR: émanation de 9 m centrée sur vous
 ------ Description (en) ------
 <p>You briefly transform your features into the horrific visage of a hag, striking fear into your enemies. Foes in the area must attempt a Will save.</p>
 <hr />
