--- a/data/spells/illusion-04-HBJPsonQnWcC3qdX.htm
+++ b/data/spells/illusion-04-HBJPsonQnWcC3qdX.htm
@@ -5,7 +5,7 @@ Nom: Terrain hallucinatoire
 
 ------ Data ------
 AreasizeEN: 50-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 15 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
