--- a/data/spells/illusion-05-RCbLd7dfquHnuvrZ.htm
+++ b/data/spells/illusion-05-RCbLd7dfquHnuvrZ.htm
@@ -5,7 +5,7 @@ Nom: Vision faussée
 
 ------ Data ------
 AreasizeEN: 100-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 30 m
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
