--- a/data/spells/illusion-05-m4Mc5XbdML92BKOE.htm
+++ b/data/spells/illusion-05-m4Mc5XbdML92BKOE.htm
@@ -5,7 +5,7 @@ Nom: Géométrie étrange
 
 ------ Data ------
 AreasizeEN: 4 cubes, each 10 feet on a side
-AreasizeFR: 
+AreasizeFR: 4 cubes, de 3 m de côté chacun
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
