--- a/data/spells/illusion-05-tcwT97RWKxsJiefG.htm
+++ b/data/spells/illusion-05-tcwT97RWKxsJiefG.htm
@@ -7,7 +7,7 @@ Nom: Siphon d'ombre
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: the triggering spell
-TargetFR: 
+TargetFR: le sort déclencheur
 ------ Description (en) ------
 <p><strong>Trigger</strong> A spell or magical effect deals damage.</p>
 <hr />
