--- a/data/spells/abjuration-04-onjZCEHs3JJJRTD0.htm
+++ b/data/spells/abjuration-04-onjZCEHs3JJJRTD0.htm
@@ -5,7 +5,7 @@ Nom: Sanctuaire secret
 
 ------ Data ------
 AreasizeEN: 100-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 30 m
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
