--- a/data/spells/abjuration-07-bVtkBJvGLP69qVGI.htm
+++ b/data/spells/abjuration-07-bVtkBJvGLP69qVGI.htm
@@ -7,7 +7,7 @@ Nom: Meute sans entrave
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: up to 10 creatures
-TargetFR: 
+TargetFR: jusqu'à 10 créatures
 ------ Description (en) ------
 <p>You free those who travel alongside you from environmental hindrances. Targets don't take circumstance penalties to Speed from vegetation, rubble, winds, or other properties of the environment, whether or not the environment is magical, and they ignore difficult terrain from such environmental properties.</p>
 <hr />
