--- a/data/spells/conjuration-03-iQD8OhhkwhvD8Blw.htm
+++ b/data/spells/conjuration-03-iQD8OhhkwhvD8Blw.htm
@@ -5,7 +5,7 @@ Nom: Marais de paresse
 
 ------ Data ------
 AreasizeEN: 5-foot burst or more
-AreasizeFR: 
+AreasizeFR: explosion de 1,5 m ou plus
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
