--- a/data/spells/evocation-01-8TQiFzGf4feoHeH0.htm
+++ b/data/spells/evocation-01-8TQiFzGf4feoHeH0.htm
@@ -5,7 +5,7 @@ Nom: Aspersion de froid
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>A cone of icy shards bursts from your spread hands and coats the target in a layer of frost. You deal 2d4 cold damage to creatures in the area; they must each attempt a Reflex save.</p>
 <hr />
