--- a/data/spells/evocation-01-AspA30tzKCHFWRf0.htm
+++ b/data/spells/evocation-01-AspA30tzKCHFWRf0.htm
@@ -5,7 +5,7 @@ Nom: Aura incendiaire
 
 ------ Data ------
 AreasizeEN: 10-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 3 m
 ------ Description (en) ------
 <p>You surround yourself with a combustible aura. Each time a creature within the emanation takes fire damage, it catches on fire, taking [[/r 2d4]] @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Persistent Fire Damage}.</p>
 <hr />
