--- a/data/spells/evocation-01-dgCH2E0gMLMUgyFl.htm
+++ b/data/spells/evocation-01-dgCH2E0gMLMUgyFl.htm
@@ -5,7 +5,7 @@ Nom: Onde de choc
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You create a wave of energy that ripples through the earth. Terrestrial creatures in the affected area must attempt a Reflex save to avoid stumbling as the shockwave shakes the ground.</p>
 <hr />
