--- a/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
+++ b/data/spells/evocation-01-mlNYROcFrUF8nFgk.htm
@@ -5,7 +5,7 @@ Nom: Aspersion d'étoiles
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You fling a spray of tiny shooting stars, dealing 1d4 fire damage. Each creature in the area must attempt a Reflex save.</p>
 <hr />
