--- a/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
+++ b/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
@@ -5,7 +5,7 @@ Nom: Explosion Ki
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>You unleash your ki as a powerful blast of force that deals 2d6 force damage.</p>
 <p>If you use 2 actions to cast ki blast, increase the size of the cone to 30 feet and the damage to [[/r 3d6 #force]].</p>
