--- a/data/spells/evocation-04-7d4DUTDIlzDa8OvX.htm
+++ b/data/spells/evocation-04-7d4DUTDIlzDa8OvX.htm
@@ -5,7 +5,7 @@ Nom: Aura destructrice
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>Swirling sands of divine devastation surround you, weakening the defenses of all they touch. Reduce the resistances of yourself and creatures in the area by 2.</p>
 <hr />
