--- a/data/spells/illusion-01-UKsIOWmMx4hSpafl.htm
+++ b/data/spells/illusion-01-UKsIOWmMx4hSpafl.htm
@@ -5,7 +5,7 @@ Nom: Couleurs dansantes
 
 ------ Data ------
 AreasizeEN: 15-foot cone
-AreasizeFR: 
+AreasizeFR: cône de 4,5 m
 ------ Description (en) ------
 <p>Swirling colors affect viewers based on their Will saves.</p>
 <hr />
