--- a/data/spells/illusion-01-ZeftDoh0nFAXBAWY.htm
+++ b/data/spells/illusion-01-ZeftDoh0nFAXBAWY.htm
@@ -5,7 +5,7 @@ Nom: Richesse apparente
 
 ------ Data ------
 AreasizeEN: 5-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 1,5m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
