--- a/data/spells/illusion-01-fXdADBwxmBsU9xPk.htm
+++ b/data/spells/illusion-01-fXdADBwxmBsU9xPk.htm
@@ -5,7 +5,7 @@ Nom: Terrain déformé
 
 ------ Data ------
 AreasizeEN: 5-foot burst or more
-AreasizeFR: 
+AreasizeFR: explosion de 1,5 m ou plus
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
