--- a/data/spells/illusion-01-znMvKqcRDilIVMwA.htm
+++ b/data/spells/illusion-01-znMvKqcRDilIVMwA.htm
@@ -7,9 +7,9 @@ Nom: Échanger les visages
 RangeEN: touch
 RangeFR: contact
 MaterialEN: You have the humanoid trait
-MaterialFR: 
+MaterialFR: vous avez le trait humanoïde
 TargetEN: you and 1 other humanoid
-TargetFR: 
+TargetFR: vous et 1 autre humanoïde
 ------ Description (en) ------
 <p>To mislead pursuers, the Lacunafex developed the means to swap visages. You trade appearances with the target, with the effects depending on the result of the target's Will saving throw. Willing and @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Unconscious} targets automatically critically fail this saving throw.</p>
 <hr />
