--- a/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
+++ b/data/spells/illusion-04-Uqj344bezBq3ESdq.htm
@@ -7,7 +7,7 @@ Nom: Cauchemar
 RangeEN: planetary
 RangeFR:  planétaire
 TargetEN: 1 creature you know by name
-TargetFR: 
+TargetFR: 1 créature dont vous connaissez le nom
 ------ Description (en) ------
 <p>You send disturbing nightmares to your target. The next time the target falls asleep, it must attempt a Will save. If you know the target only by name and have never met them, the target gets a +4 circumstance bonus to the Will save.</p>
 <hr />
