--- a/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
+++ b/data/spells/illusion-04-h5UqEdeqK8iTcU0J.htm
@@ -9,9 +9,9 @@ TargetFR: 1 créature vivante
 SecondaryCasterEN: 03
 SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana or Occultism (master, the check has the  secret trait
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (maître), le test possède le trait secret
 SecondaryCheckEN: rcana, Nature, Occultism,  Religion, or Society (whichever is required to Recall Knowledge  about the creature being duplicated); Crafting; Deception
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes, Nature, Occultisme, Religion ou Société (celui qui est requis pour Se souvenir à propose de la créature dupliquée) ; Artisanat ; Duperie
 ------ Description (en) ------
 <p>You create an illusory duplicate of the target creature by animating ice or snow sculpted in its shape. The simulacrum is a 4th-level creature with no special abilities. If it needs to attempt a roll or use a DC, use the moderate number for a monster, except as noted below. It doesn't have any specific memories from the target, but it can use information about the creature gained from any of the casters to Impersonate the target. It looks exactly like the target and has a Deception modifier to @Compendium[pf2e.actionspf2e.AJstokjdG6iDjVjE]{Impersonate} that creature equal to the modifier of the secondary spellcaster who rolled the Deception check, with a +4 status bonus.</p>
 <p>While it doesn't have any of the original's special abilities, like a dragon's breath weapon, the illusions that make up the simulacrum allow it to appear to use those abilities; they just never seem to have an effect. For instance, against a simulacrum dragon's breath weapon, all creatures in the area seem to critically succeed at their saving throws and take no damage. Creatures can attempt to disbelieve the illusion by attempting a Perception check against the Deception DC of the secondary spellcaster who rolled the Deception check.</p>
