--- a/data/spells/illusion-04-hkfH9Z53hPzcOwNB.htm
+++ b/data/spells/illusion-04-hkfH9Z53hPzcOwNB.htm
@@ -7,7 +7,7 @@ Nom: Voile
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: up to 10 creatures
-TargetFR: 
+TargetFR: jusqu'à 10 créatures
 ------ Description (en) ------
 <p>You disguise the targets as other creatures of the same body shape and roughly similar height (within 6 inches) and weight (within 50 pounds). The disguise can hide the targets' identities or let them appear to be of another ancestry, but it's not precise enough to impersonate specific individuals. The spell doesn't change voice, scent, or mannerisms. You choose the disguise for each target; for example, you could make one target appear to be a dwarf and another an elf. Casting veil counts as setting up a disguise for the purpose of the Impersonate action. It allows the target to ignore any circumstance penalties they might take for being disguised as dissimilar creatures, and it gives the targets a +4 status bonus to Deception checks to prevent others from seeing through their disguises, and add their level even if untrained. You can Dismiss any or all of these disguises.</p>
 <hr />
