--- a/data/spells/illusion-05-DdXKfIjDtORUtUvY.htm
+++ b/data/spells/illusion-05-DdXKfIjDtORUtUvY.htm
@@ -5,15 +5,15 @@ Nom: Enchantement féerique
 
 ------ Data ------
 AreasizeEN: 30-foot burst or Target
-AreasizeFR: 
+AreasizeFR: explosion de 9 m ou cible
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: up to 10 creatures
-TargetFR: 
+TargetFR: jusqu'à 10 créatures
 ------ Description (en) ------
 <p><strong>Area</strong> 30-foot burst or <strong>Targets</strong> up to 10 creatures</p>
 <hr />
 <p>You call upon fey glamours to cloak an area or the targets in illusion. This has the effect of either @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Illusory Scene} on the area or @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{Veil} on the creatures, as if heightened to a level 1 level lower than fey glamour, using fey glamour's range and duration.</p>
 ------ Description (fr) ------
 <p>Vous tissez un enchantement féerique pour camoufler une zone ou les cibles sous une illusion.</p>
-<p>Ceci produit l’effet d’une @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{scène illusoire} dans la zone ou d’un @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{voile} sur les créatures, comme s’il était intensifié au niveau de l’enchantement féerique moins 1, en utilisant la portée et la durée de l’enchantement féerique.</p>
+<p>Ceci produit l’effet d’une @Compendium[pf2e.spells-srd.Ucf8eynbZMfUucjE]{Scène illusoire} dans la zone ou d’un @Compendium[pf2e.spells-srd.hkfH9Z53hPzcOwNB]{voile} sur les créatures, comme s’il était intensifié au niveau de l’enchantement féerique moins 1, en utilisant la portée et la durée de l’enchantement féerique.</p>
