champs de sorts traduits

--- a/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
+++ b/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
@@ -11,7 +11,7 @@ TargetFR:
 SecondaryCasterEN: 04
 SecondaryCasterFR: 
 PrimaryCheckEN: Nature (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Crafting, Diplomacy, Survival
 SecondaryCheckFR: 
 ------ Description (en) ------
