--- a/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
+++ b/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
@@ -11,7 +11,7 @@ TargetFR: 1 créature
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana (legendary) or Occultism (legendary)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (légendaire) ou Occultisme (légendaire)
 SecondaryCheckEN: Society
 SecondaryCheckFR: Société
 ------ Description (en) ------
