--- a/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
+++ b/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
@@ -5,7 +5,7 @@ Nom: Festin des héros
 
 ------ Data ------
 RangeEN: 40 feet
-RangeFR: 
+RangeFR: 12 m
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Nature, Religion, or Occultism (expert);
