--- a/data/spells/conjuration-06-JbAcSLu62TU1OgNF.htm
+++ b/data/spells/conjuration-06-JbAcSLu62TU1OgNF.htm
@@ -5,7 +5,7 @@ Nom: Entraves végétales
 
 ------ Data ------
 AreasizeEN: 40-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 12 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
