--- a/data/spells/divination-03-ThE5zPYKF4weiljj.htm
+++ b/data/spells/divination-03-ThE5zPYKF4weiljj.htm
@@ -5,7 +5,7 @@ Nom: Montrer le chemin
 
 ------ Data ------
 AreasizeEN: 5-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 TargetEN: you and allies in the area
 TargetFR: 
 ------ Description (en) ------
