--- a/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
+++ b/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
@@ -11,7 +11,7 @@ TargetFR:
 SecondaryCasterEN: 03
 SecondaryCasterFR: 3
 PrimaryCheckEN: Nature (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Lore (any), Society, Survival
 SecondaryCheckFR: 
 ------ Description (en) ------
