--- a/data/spells/enchantment-09-fkDeKktdmbeplYRY.htm
+++ b/data/spells/enchantment-09-fkDeKktdmbeplYRY.htm
@@ -5,7 +5,7 @@ Nom: Présence écrasante
 
 ------ Data ------
 AreasizeEN: 40-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 12 m
 TargetEN: any number of creatures
 TargetFR: 
 ------ Description (en) ------
