--- a/data/spells/enchantment-10-Um0aaJotqMKGmAlR.htm
+++ b/data/spells/enchantment-10-Um0aaJotqMKGmAlR.htm
@@ -5,7 +5,7 @@ Nom: Flûte de Hamelin
 
 ------ Data ------
 AreasizeEN: 5-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 ------ Description (en) ------
 <p>Your performance enraptures those who hear it, compelling them to follow you about in admiration. Each creature within the emanation must attempt a Will save when you Cast the Spell or the first time they enter the area, after which they become temporarily immune for 1 day.</p>
 <p>Once per turn, you can spend a single action, which has the concentrate trait, to increase the emanation's radius by 5 feet. You can @Compendium[pf2e.actionspf2e.AjLSHZSWQ90exdLo]{Dismiss} the spell.</p>
