--- a/data/spells/evocation-02-Dbd5W6G8U2vzWolN.htm
+++ b/data/spells/evocation-02-Dbd5W6G8U2vzWolN.htm
@@ -5,7 +5,7 @@ Nom: consécration
 
 ------ Data ------
 RangeEN: 40 feet
-RangeFR: 
+RangeFR: 12 m
 SecondaryCasterEN: 2, must be worshippers of your religion
 SecondaryCasterFR: 
 PrimaryCheckEN: Religion
