--- a/data/spells/evocation-07-O7ZEqWjwdKyo2CUv.htm
+++ b/data/spells/evocation-07-O7ZEqWjwdKyo2CUv.htm
@@ -5,7 +5,7 @@ Nom: Eruption volcanique
 
 ------ Data ------
 AreasizeEN: 5-foot radius, 80-foot-tall cylinder
-AreasizeFR: 
+AreasizeFR: rayon de 1,5 m, cylindre de 24 m de haut
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
