--- a/data/spells/evocation-08-2CNqkt2s2IYkVnv6.htm
+++ b/data/spells/evocation-08-2CNqkt2s2IYkVnv6.htm
@@ -7,13 +7,13 @@ Nom: Emprisonnement
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 creature of up to 16th level
-TargetFR: 
+TargetFR: 1 créature de niveau 16 maximum
 SecondaryCasterEN: 06
-SecondaryCasterFR: 
+SecondaryCasterFR: 6
 PrimaryCheckEN: Arcana (legendary) or Occultism (legendary)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (légendaire) ou Occultisme (légendaire)
 SecondaryCheckEN: Crafting, Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Artisanat, Société
 ------ Description (en) ------
 <p>You perform a ritual to imprison a creature in one of several forms. While some versions of this ritual offer all of the forms, others include only a single form or only a few of them. Whichever form you use, the effect can't be counteracted, though it can be ended by @Compendium[pf2e.spells-srd.4ddJSjC9Zz5DX0oG]{Freedom}. Some forms of <em>imprisonment</em> can be ended by other means. Because the ritual requires the target to remain within 10 feet at all times, it typically requires you to subdue the target first.</p>
 <ul>
