--- a/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
+++ b/data/spells/evocation-08-XkDCzMIyc0YOjw05.htm
@@ -5,11 +5,11 @@ Nom: Contrôle du climat
 
 ------ Data ------
 AreasizeEN: 2-mile-radius circle centered on you
-AreasizeFR: 
+AreasizeFR: rayon de 3 kilomètres centré sur vous
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Survival
 SecondaryCheckFR: Survie
 ------ Description (en) ------
