--- a/data/spells/evocation-08-wi405lBjPcbF1DeR.htm
+++ b/data/spells/evocation-08-wi405lBjPcbF1DeR.htm
@@ -5,7 +5,7 @@ Nom: Vents punitifs
 
 ------ Data ------
 AreasizeEN: 30-foot radius, 100-foot-tall cylinder
-AreasizeFR: 
+AreasizeFR: rayon de 9 m, cylindre de 24 m de hauteur
 RangeEN: 100 feet
 RangeFR: 30 m
 ------ Description (en) ------
