--- a/data/spells/evocation-09-jrBa9deU2ULFWvSl.htm
+++ b/data/spells/evocation-09-jrBa9deU2ULFWvSl.htm
@@ -5,7 +5,7 @@ Nom: Nuée de météores
 
 ------ Data ------
 AreasizeEN: 4 40-foot bursts
-AreasizeFR: 
+AreasizeFR: 4 explosions de 12 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
