--- a/data/spells/evocation-09-r4HLQcYwB62bTayl.htm
+++ b/data/spells/evocation-09-r4HLQcYwB62bTayl.htm
@@ -5,9 +5,9 @@ Nom: Tempête vengeresse
 
 ------ Data ------
 AreasizeEN: 360-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 120 m
 RangeEN: 800 feet
-RangeFR: 
+RangeFR: 240 m
 ------ Description (en) ------
 <p>A massive storm cloud forms in the air in a 360-foot burst. Beneath it, rain begins to fall, and gales impose a -4 circumstance penalty to physical ranged attacks and weapon ranged attacks, and the air in the area becomes greater difficult terrain for flying creatures. When you Cast this Spell and the first time each round you Sustain the Spell, you can choose one of the following storm effects. You can't choose the same effect twice in a row.</p>
 <ul>
