--- a/data/spells/enchantment-01-7ZinJNzxq0XF0oMx.htm
+++ b/data/spells/enchantment-01-7ZinJNzxq0XF0oMx.htm
@@ -5,7 +5,7 @@ Nom: Imprécation
 
 ------ Data ------
 AreasizeEN: 5-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 TargetEN: enemies in the area
 TargetFR: 
 ------ Description (en) ------
