--- a/data/spells/enchantment-01-XSujb7EsSwKl19Uu.htm
+++ b/data/spells/enchantment-01-XSujb7EsSwKl19Uu.htm
@@ -5,7 +5,7 @@ Nom: Bénédiction
 
 ------ Data ------
 AreasizeEN: 5-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 TargetEN: you and allies in the area
 TargetFR: 
 ------ Description (en) ------
