--- a/data/spells/evocation-01-rnNGALRtsjspFTws.htm
+++ b/data/spells/evocation-01-rnNGALRtsjspFTws.htm
@@ -5,7 +5,7 @@ Nom: Explosion d'acide
 
 ------ Data ------
 AreasizeEN: 5-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 ------ Description (en) ------
 <p><span>You create a shell of acid around yourself that immediately bursts outward, dealing 2d6 acid damage to each creature in the area.</span></p>
 <hr />
