--- a/data/spells/evocation-07-HES5jvGiNZZnJycK.htm
+++ b/data/spells/evocation-07-HES5jvGiNZZnJycK.htm
@@ -5,9 +5,9 @@ Nom: Cage de force
 
 ------ Data ------
 AreasizeEN: 20-foot cube
-AreasizeFR: 
+AreasizeFR: cube de 6 m de côté
 RangeEN: 30 feet; 1 cube 20 feet on each side
-RangeFR: 
+RangeFR: 9 m ; 1 cube de 6 m de côté
 ------ Description (en) ------
 <p>You create an immobile, invisible prison of sheer force. The cage is a 20-foot cube made of bands of force, each a half inch thick and a half inch apart, that extend to the Ethereal Plane. Each creature in the area where you create the cage must attempt a Reflex save. If such a creature fails, it becomes trapped inside the cage. If it succeeds, it's pushed outside the cage into a space of its choice. If a creature in the area is too big to fit inside the prison, the spell automatically fails.</p>
 <p>The cage has AC 10, Hardness 20, and 40 Hit Points, and it's immune to critical hits and precision damage. A creature capable of passing through the space between the bars (typically a Tiny creature) can leave; all others are confined within.</p>
