--- a/data/spells/evocation-07-tYP8unoR0a5Dq9EA.htm
+++ b/data/spells/evocation-07-tYP8unoR0a5Dq9EA.htm
@@ -7,7 +7,7 @@ Nom: Litanie de dépravation
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 good creature
-TargetFR: 
+TargetFR: 1 créature bonne
 ------ Description (en) ------
 <p>Your litany calls into question the morals your foe claims to hold dear. The target gains weakness 7 to evil, then becomes temporarily immune to all your litanies for 1 minute.</p>
 <hr />
