--- a/data/spells/evocation-08-8fEfjvC01gNclDKJ.htm
+++ b/data/spells/evocation-08-8fEfjvC01gNclDKJ.htm
@@ -5,7 +5,7 @@ Nom: Déluge intense
 
 ------ Data ------
 AreasizeEN: 40-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 12 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
