--- a/data/spells/evocation-09-XYhU3Wi94n1RKxTa.htm
+++ b/data/spells/evocation-09-XYhU3Wi94n1RKxTa.htm
@@ -5,9 +5,9 @@ Nom: Seigneur des tempêtes
 
 ------ Data ------
 AreasizeEN: 100-foot emanation which affects you.
-AreasizeFR: 
+AreasizeFR: émanation de 30 m qui vous affecte
 MaterialEN: You are outdoors and aboveground.
-MaterialFR: 
+MaterialFR: vous êtes à l'extérieur et au dessus du sol
 ------ Description (en) ------
 <p>The sky above you darkens in a matter of moments, swirling with ominous clouds punctuated by flashes of lighting. The first time you Sustain this Spell each round, you can select one of the following effects to occur in the area, affecting you as well.</p>
 <ul>
