--- a/data/spells/evocation-09-ZqmP9gijBmK7y8Xy.htm
+++ b/data/spells/evocation-09-ZqmP9gijBmK7y8Xy.htm
@@ -7,7 +7,7 @@ Nom: Arme du jugement
 RangeEN: 100 feet
 RangeFR: 30 m
 MaterialEN: You have a deity.
-MaterialFR: 
+MaterialFR: vous avez une divinité
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
