--- a/data/spells/evocation-10-wLIvH0AT1u7oa64N.htm
+++ b/data/spells/evocation-10-wLIvH0AT1u7oa64N.htm
@@ -7,7 +7,7 @@ Nom: Cataclysme
 AreasizeEN: 60-foot burst
 AreasizeFR: explosion de 18 m
 RangeEN: 1,000 feet
-RangeFR: 
+RangeFR: 300 m
 ------ Description (en) ------
 <p>You call upon the unimaginable power of world-ending cataclysms, ripping a small piece of each cataclysm and combining them together into one horrifically powerful attack. The following effects come down upon all creatures in the area. Treat the resistances of creatures in the area as if they were 10 lower for the purpose of determining the cataclysm's damage. Each creature attempts one basic Reflex save that applies to all five types of damage.</p>
 <ul>
