--- a/data/spells/illusion-01-6GjJtLJnwC18Y0aZ.htm
+++ b/data/spells/illusion-01-6GjJtLJnwC18Y0aZ.htm
@@ -5,9 +5,9 @@ Nom: Vraie nature
 
 ------ Data ------
 RangeEN: 5-foot emanation
-RangeFR: 
+RangeFR: émanation de 1,5 m
 TargetEN: creatures in the area
-TargetFR: 
+TargetFR: créatures dans la zone
 ------ Description (en) ------
 <p>With a wave of the hand, you cause the targets to see the world around them as if a gauzy film had been lifted away to expose the truth that lies below their perceived reality. Natural features they can see grow twisted and horrendous, structures appear distorted and ruined, and objects seem warped and alien. This alternate vision fades quickly, but the glimpse beyond the natural world lingers for the spell’s duration.</p>
 <p>Aberrations or worshippers of Outer Gods or Great Old Ones are bolstered by this vision of warped reality and gain a +1 status bonus to Will saving throws and attack rolls for 1 minute, while all other creatures must attempt a Will saving throw.</p>
