chhamps traduits des sorts

--- a/data/spells/enchantment-01-7ZinJNzxq0XF0oMx.htm
+++ b/data/spells/enchantment-01-7ZinJNzxq0XF0oMx.htm
@@ -7,7 +7,7 @@ Nom: Imprécation
 AreasizeEN: 5-foot emanation
 AreasizeFR: émanation de 1,5 m
 TargetEN: enemies in the area
-TargetFR: 
+TargetFR: ennemis dans la zone
 ------ Description (en) ------
 <p>You fill the minds of your enemies with doubt.</p>
 <p>Enemies in the area must succeed at a Will save or take a -1 status penalty to attack rolls as long as they are in the area.</p>
