--- a/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
+++ b/data/spells/evocation-01-jfVCuOpzC6mUrf6f.htm
@@ -7,7 +7,7 @@ Nom: Poussée hydraulique
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: 1 creature or unattended object
-TargetFR: 
+TargetFR: 1 créature ou un objet non tenu
 ------ Description (en) ------
 <p>You call forth a powerful blast of pressurized water that bludgeons the target and knocks it back. Make a ranged spell attack roll.</p>
 <hr />
