--- a/data/spells/evocation-03-9AAkVUCwF6WVNNY2.htm
+++ b/data/spells/evocation-03-9AAkVUCwF6WVNNY2.htm
@@ -5,7 +5,7 @@ Nom: Éclair
 
 ------ Data ------
 AreasizeEN: 120-foot line
-AreasizeFR: 
+AreasizeFR: ligne de 36 m
 ------ Description (en) ------
 <p>A bolt of lightning strikes outward from your hand, dealing 4d12 electricity damage.</p>
 <hr />
