--- a/data/spells/evocation-03-JcobNl4iE9HmMYtE.htm
+++ b/data/spells/evocation-03-JcobNl4iE9HmMYtE.htm
@@ -5,7 +5,7 @@ Nom: Souffle de dragon
 
 ------ Data ------
 AreasizeEN: 30-foot cone or 60-foot line originating from you.
-AreasizeFR: 
+AreasizeFR: cône de 9 m ou ligne de 18 m dont vous êtes le point d'origine
 ------ Description (en) ------
 <p>You spew energy from your mouth, dealing [[/r 5d6]] damage. The area, damage type, and save depend on the dragon type in your bloodline.</p>
 <h2>Dragon Breath</h2>
