--- a/data/spells/evocation-03-L37RTc7K79OUpZ7X.htm
+++ b/data/spells/evocation-03-L37RTc7K79OUpZ7X.htm
@@ -5,7 +5,7 @@ Nom: Vide intersidéral
 
 ------ Data ------
 AreasizeEN: 30 feet
-AreasizeFR: 
+AreasizeFR: 9 m
 TargetEN: 1 creature
 TargetFR: 1 créature
 ------ Description (en) ------
