--- a/data/spells/evocation-03-Wi2HcreCfujKiCvW.htm
+++ b/data/spells/evocation-03-Wi2HcreCfujKiCvW.htm
@@ -5,7 +5,7 @@ Nom: Flammes tourbillonnantes
 
 ------ Data ------
 AreasizeEN: up to two 5-foot bursts that don't overlap
-AreasizeFR: 
+AreasizeFR: jusqu'à 2 émanations de 1,5m qui ne se chevauchent pas
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
