--- a/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
+++ b/data/spells/evocation-05-9LHr9SuDLTicdbXs.htm
@@ -5,7 +5,7 @@ Nom: Volute de feu infernal
 
 ------ Data ------
 AreasizeEN: 10-foot radius, 60-foot-tall cylinder
-AreasizeFR: 
+AreasizeFR: rayon de 3 m, cylindre de 15 m de hauteur
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
