--- a/data/spells/evocation-05-E3X2RbzWHCdz7gsk.htm
+++ b/data/spells/evocation-05-E3X2RbzWHCdz7gsk.htm
@@ -5,7 +5,7 @@ Nom: Colonne de feu
 
 ------ Data ------
 AreasizeEN: 10-foot radius, 40-foot-tall cylinder
-AreasizeFR: 
+AreasizeFR: rayon de 3 m, cylindre de 12 m de hauteur
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
