--- a/data/spells/evocation-05-IqJ9URobmJ9L9UBG.htm
+++ b/data/spells/evocation-05-IqJ9URobmJ9L9UBG.htm
@@ -5,7 +5,7 @@ Nom: Explosion d'ombre
 
 ------ Data ------
 AreasizeEN: varies
-AreasizeFR: 
+AreasizeFR: variable
 RangeEN: varies
 RangeFR: variable
 ------ Description (en) ------
