--- a/data/spells/evocation-05-Qlp8G3knwLGhAxQ0.htm
+++ b/data/spells/evocation-05-Qlp8G3knwLGhAxQ0.htm
@@ -5,9 +5,9 @@ Nom: Explosion élémentaire
 
 ------ Data ------
 AreasizeEN: 10-foot-radius burst, 30-foot cone, or 60-foot line
-AreasizeFR: 
+AreasizeFR: explosion de 3 m de rayon, cône de 6 m, ou ligne de 18 m
 RangeEN: 30 feet (burst only)
-RangeFR: 
+RangeFR: 9 m (explosion seulement)
 ------ Description (en) ------
 <p><strong>Area</strong> 10-foot-radius burst, 30-foot cone, or 60-foot line</p>
 <hr />
