--- a/data/spells/evocation-05-zoY0fQYTF1NzezTg.htm
+++ b/data/spells/evocation-05-zoY0fQYTF1NzezTg.htm
@@ -5,7 +5,7 @@ Nom: Voler le ciel
 
 ------ Data ------
 TargetEN: the creature you hit
-TargetFR: 
+TargetFR: la créature que vous touchez
 ------ Description (en) ------
 <p><strong>Trigger</strong> You make a successful unarmed Strike against a flying creature.</p>
 <p><strong>Targets</strong> the creature you hit</p>
