--- a/data/spells/evocation-07-37ESlJzUvVbOudOT.htm
+++ b/data/spells/evocation-07-37ESlJzUvVbOudOT.htm
@@ -5,7 +5,7 @@ Nom: Inversion de la gravité
 
 ------ Data ------
 AreasizeEN: 20-foot radius, 40-foot-tall cylinder
-AreasizeFR: 
+AreasizeFR: 6 m de rayon, cylindre de 12 m de haut
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
