--- a/data/spells/necromancy-01-rfZpqmj0AIIdkVIs.htm
+++ b/data/spells/necromancy-01-rfZpqmj0AIIdkVIs.htm
@@ -5,7 +5,7 @@ Nom: Guérison
 
 ------ Data ------
 AreasizeEN: varies
-AreasizeFR: 
+AreasizeFR: variable
 RangeEN: varies
 RangeFR: variable
 TargetEN: 1 willing living creature or 1 undead
