--- a/data/spells/necromancy-01-wdA52JJnsuQWeyqz.htm
+++ b/data/spells/necromancy-01-wdA52JJnsuQWeyqz.htm
@@ -5,7 +5,7 @@ Nom: Mise à mal
 
 ------ Data ------
 AreasizeEN: varies
-AreasizeFR: 
+AreasizeFR: variable
 RangeEN: varies
 RangeFR: variable
 TargetEN: 1 living creature or 1 willing undead creature
