--- a/data/spells/abjuration-03-VBNevVovTCpn04vL.htm
+++ b/data/spells/abjuration-03-VBNevVovTCpn04vL.htm
@@ -7,7 +7,7 @@ Nom: Révélation de la flamme qui ne vacille pas
 MaterialEN: Your previous action was a successful unarmed Strike.
 MaterialFR: 
 TargetEN: the creature you hit
-TargetFR: 
+TargetFR: la créature que vous touchez
 ------ Description (en) ------
 <p><span>You light your foe with revealing flame. The GM attempts a secret counteract check against each illusion affecting the creature; on a success, you suppress the illusion for the duration, rather than end the effect. </span></p>
 ------ Description (fr) ------
