--- a/data/spells/conjuration-04-K1wmI4qPmRhFczmy.htm
+++ b/data/spells/conjuration-04-K1wmI4qPmRhFczmy.htm
@@ -5,7 +5,7 @@ Nom: Tempête de poussière
 
 ------ Data ------
 AreasizeEN: 20-foot-radius burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m de rayon
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
