--- a/data/spells/evocation-03-06pzGkKTyPE3tHR8.htm
+++ b/data/spells/evocation-03-06pzGkKTyPE3tHR8.htm
@@ -5,7 +5,7 @@ Nom: Puits de gravité
 
 ------ Data ------
 AreasizeEN: 30-foot-radius burst
-AreasizeFR: 
+AreasizeFR: explosion de 9 m
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
