--- a/data/spells/evocation-03-57ulIxg3Of2wCbEh.htm
+++ b/data/spells/evocation-03-57ulIxg3Of2wCbEh.htm
@@ -5,7 +5,7 @@ Nom: Glyphe de cristal électrique
 
 ------ Data ------
 TargetEN: 1 hinge or latch
-TargetFR: 
+TargetFR: 1 charnière ou un loquet
 ------ Description (en) ------
 <p><span>You create an @Compendium[pf2e.hazards.491qhVbjsHnOuMZW]{Electric Latch Rune} hazard on the target, creating a special crystalline lock on the object. You can also substitute your spell DC for any of the hazard's listed DCs. You can have only one such hazard active at a time, and if you cast this spell while a previous <em>electric latch rune</em> is active, the older hazard discharges harmlessly.</span></p>
 <hr />
