--- a/data/spells/evocation-04-8M03UxGXjYyDFAoy.htm
+++ b/data/spells/evocation-04-8M03UxGXjYyDFAoy.htm
@@ -5,7 +5,7 @@ Nom: Tempête d'armes
 
 ------ Data ------
 AreasizeEN: 30-foot cone or 10-foot emanation
-AreasizeFR: 
+AreasizeFR: cône de 9 m ou émanation de 3 m
 ------ Description (en) ------
 <p>You swing a weapon you're holding, and the weapon magically multiplies into duplicates that swipe at all creatures in either a cone or an emanation. This flurry deals four dice of damage to creatures in the area. This damage has the same type as the weapon and uses the same die size. Determine the die size as if you were attacking with the weapon; for instance, if you were wielding a two-hand weapon in both hands, you'd use its two-hand damage die.</p>
 <hr /><strong>Critical Success</strong> The creature is unaffected.
