--- a/data/spells/evocation-04-VmqdVWCb8zAUCW8S.htm
+++ b/data/spells/evocation-04-VmqdVWCb8zAUCW8S.htm
@@ -7,7 +7,7 @@ Nom: Dichotomie débilitante
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature other than you
-TargetFR: 
+TargetFR: 1 créature autre que vous
 ------ Description (en) ------
 <p>You reveal a glimpse of the impossible conflicts between the<br />divine anathema behind your curse, forcing you to reckon<br />with another's conflicts as well.</p>
 <p>You and the target each take 9d6 mental damage with a basic Will save, and the target is @Compendium[pf2e.conditionitems.dfCMdR4wnpbYNTix]{Stunned 1} if it critically fails its save. You get a degree of success one better than you rolled for your saving throw.</p>
