--- a/data/spells/evocation-05-ZW8ovbu1etdfMre3.htm
+++ b/data/spells/evocation-05-ZW8ovbu1etdfMre3.htm
@@ -5,7 +5,7 @@ Nom: Tempête d'acide
 
 ------ Data ------
 AreasizeEN: 20-foot-radius burst
-AreasizeFR: 
+AreasizeFR: explosion de 6 m de rayon
 RangeEN: 120 feet
 RangeFR: 36 m
 ------ Description (en) ------
