--- a/data/spells/evocation-05-tpLTLbJUrYcMWGld.htm
+++ b/data/spells/evocation-05-tpLTLbJUrYcMWGld.htm
@@ -7,7 +7,7 @@ Nom: Transport télékinésique
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: 1 unattended object of up to 80 Bulk with no dimension longer than 20 feet
-TargetFR: 
+TargetFR: 1 objet non tenu de 80 Encombrement maximum dont aucune dimension n'excède 6 m
 ------ Description (en) ------
 <p>You move the target up to 20 feet, potentially suspending it in midair. When you Sustain the Spell, you can do so again, or you can choose a different eligible target to move.</p>
 ------ Description (fr) ------
