--- a/data/spells/evocation-05-zfn5RqAdF63neqpP.htm
+++ b/data/spells/evocation-05-zfn5RqAdF63neqpP.htm
@@ -5,7 +5,7 @@ Nom: Contrôle de l'eau
 
 ------ Data ------
 AreasizeEN: 50 feet long by 50 feet wide
-AreasizeFR: 
+AreasizeFR: 15 m de long sur 15 m de large
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
