champs traduits des sorts d'évocation

--- a/data/spells/enchantment-09-xFY9RtDE4DQKlWNR.htm
+++ b/data/spells/enchantment-09-xFY9RtDE4DQKlWNR.htm
@@ -7,7 +7,7 @@ Nom: Croisade
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: up to 4 creatures
-TargetFR: 
+TargetFR: jusqu'à 4 créatures
 ------ Description (en) ------
 <p>You issue a divine mandate or proclaim a cause to the targets. It can be to attain an item, claim a patch of land, slay a creature, war with a group, or be entirely peaceful. Your cause can't force the targets to harm one another or themselves. The targets become completely dedicated to that cause, depending on their levels. They choose their own actions, but they favor direct action over inaction or indirect action.</p>
 <ul>
