--- a/data/spells/evocation-01-Qw3fnUlaUbnn7ipC.htm
+++ b/data/spells/evocation-01-Qw3fnUlaUbnn7ipC.htm
@@ -7,7 +7,7 @@ Nom: Prestidigitation
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 object (cook, lift, or tidy only)
-TargetFR: 
+TargetFR: 1 objet (cuisine, soulève ou nettoie seulement)
 ------ Description (en) ------
 <p>The simplest magic does your bidding. You can perform simple magical effects for as long as you Sustain the Spell. Each time you Sustain the Spell, you can choose one of four options.</p>
 <ul>
