--- a/data/spells/evocation-01-WBmvzNDfpwka3qT4.htm
+++ b/data/spells/evocation-01-WBmvzNDfpwka3qT4.htm
@@ -7,7 +7,7 @@ Nom: Lumière
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 object of 1 Bulk or less, either unattended or possessed by you or a willing ally
-TargetFR: 
+TargetFR: 1 objet de 1 Encombrement maximum, soit non tenu, soit en votre possession ou celle d'un allié volontaire
 ------ Description (en) ------
 <p>The object glows, casting bright light in a 20-foot radius (and dim light for the next 20 feet) like a torch. If you cast this spell again on a second object, the light spell on the first object ends.</p>
 <hr />
