--- a/data/spells/evocation-01-pwzdSlJgYqN7bs2w.htm
+++ b/data/spells/evocation-01-pwzdSlJgYqN7bs2w.htm
@@ -7,7 +7,7 @@ Nom: Manipulation à distance
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 unattended object of light Bulk or less
-TargetFR: 
+TargetFR: 1 objet non tenu d'Encombrement Léger au maximum
 ------ Description (en) ------
 <p>You create a single magical hand, either invisible or ghostlike, that grasps the target object and moves it slowly up to 20 feet. Because you're levitating the object, you can move it in any direction. When you Sustain the Spell, you can move the object an additional 20 feet. If the object is in the air when the spell ends, the object falls.</p>
 <hr />
