--- a/data/spells/evocation-02-1xbFBQDRs0hT5xZ9.htm
+++ b/data/spells/evocation-02-1xbFBQDRs0hT5xZ9.htm
@@ -7,7 +7,7 @@ Nom: Fracassement
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 unattended object
-TargetFR: 
+TargetFR: 1 objet non tenu
 ------ Description (en) ------
 <p>A high-frequency sonic attack shatters a nearby object. You deal 2d10 sonic damage to the object, ignoring the object's Hardness if it is 4 or lower.</p>
 <hr />
