--- a/data/spells/evocation-02-2ZdHjnpEQJuqOYSG.htm
+++ b/data/spells/evocation-02-2ZdHjnpEQJuqOYSG.htm
@@ -5,7 +5,7 @@ Nom: Sphère de feu
 
 ------ Data ------
 AreasizeEN: 5-foot square
-AreasizeFR: 
+AreasizeFR: case de 1,5 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
