--- a/data/spells/evocation-02-Popa5umI3H33levx.htm
+++ b/data/spells/evocation-02-Popa5umI3H33levx.htm
@@ -5,7 +5,7 @@ Nom: Couche de givre
 
 ------ Data ------
 AreasizeEN: 15-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 4,5 m
 RangeEN: 60 feet
 RangeFR: 18 m 
 ------ Description (en) ------
