--- a/data/spells/enchantment-01-T90ij2uu6ZaBaSXV.htm
+++ b/data/spells/enchantment-01-T90ij2uu6ZaBaSXV.htm
@@ -7,7 +7,7 @@ Nom: Lamentation
 RangeEN: 30-foot cone
 RangeFR: 
 TargetEN: 1 or more creatures
-TargetFR: 
+TargetFR: 1 créature ou plus
 ------ Description (en) ------
 <p><span>You let out your negative emotions in a guttural wail that shakes your enemies' hearts and deals 1d8 mental damage (basic Will save). If you have any harmful conditions imposed by emotion effects, <em>lament</em> deals additional mental damage equal to the counteract level of the highest-level effect.</span></p>
 <hr />
