--- a/data/spells/evocation-01-W37iBXLsY2trJ1rS.htm
+++ b/data/spells/evocation-01-W37iBXLsY2trJ1rS.htm
@@ -7,7 +7,7 @@ Nom: Arme améliorée
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 weapon you're wielding
-TargetFR: 
+TargetFR: 1 arme que vous maniez
 ------ Description (en) ------
 <p>Holding your weapon aloft, you fill it with divine energy.</p>
 <p>On your next Strike with that weapon before the start of your next turn, you gain a +1 status bonus to the attack roll and the weapon deals an additional die of damage.</p>
