--- a/data/spells/evocation-01-g1eY1vN44mgluE33.htm
+++ b/data/spells/evocation-01-g1eY1vN44mgluE33.htm
@@ -7,7 +7,7 @@ Nom: Javelot chargé
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: 1 or more creatures
-TargetFR: 
+TargetFR: 1 créature ou plus
 ------ Description (en) ------
 <p>You fire a javelin of electricity that leaves a charged field around its target. Make a spell attack roll. The javelin deals 1d6 electricity damage and 1 persistent electricity damage.</p>
 <p>As long as the target is taking @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Persistent Damage} from this spell, creatures gain a +1 status bonus to attack rolls with metal weapons or electricity effects against the target, and the target takes a -1 status penalty to saves against electricity effects.</p>
