--- a/data/spells/evocation-01-kBhaPuzLUSwS6vVf.htm
+++ b/data/spells/evocation-01-kBhaPuzLUSwS6vVf.htm
@@ -7,7 +7,7 @@ Nom: Arc électrique
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 or 2 creatures
-TargetFR: 
+TargetFR: 1 ou 2 créatures
 ------ Description (en) ------
 <p>An arc of lightning leaps from one target to another. You deal electricity damage equal to 1d4 plus your spellcasting ability modifier.</p>
 <hr />
