--- a/data/spells/evocation-02-Dbd5W6G8U2vzWolN.htm
+++ b/data/spells/evocation-02-Dbd5W6G8U2vzWolN.htm
@@ -9,9 +9,9 @@ RangeFR: 12 m
 SecondaryCasterEN: 2, must be worshippers of your religion
 SecondaryCasterFR: 
 PrimaryCheckEN: Religion
-PrimaryCheckFR: 
+PrimaryCheckFR: Religion
 SecondaryCheckEN: Crafting, Performance
-SecondaryCheckFR: 
+SecondaryCheckFR: Artisanat, Représentation
 ------ Description (en) ------
 <p>You consecrate a site to your deity, chanting praises and creating a sacred space. While within the area, worshippers of your deity gain a +1 status bonus to attack rolls, skill checks, saving throws, and Perception checks, and creatures anathema to your deity (such as undead for @Compendium[pf2e.deities.QZD0u1jxwz0kj8uI]{Pharasma} or @Compendium[pf2e.deities.BNycwu3I21dTh4D9]{Sarenrae}) take a -1 status penalty to those checks. Attacks made by worshippers of your deity within the area deal 1 damage of one of your deity's alignment types (your choice); if your deity is true neutral, you don't gain this benefit.</p>
 <hr />
