champs traduits des sorts

--- a/data/spells/abjuration-01-cJq5NarY0eOZN74A.htm
+++ b/data/spells/abjuration-01-cJq5NarY0eOZN74A.htm
@@ -5,7 +5,7 @@ Nom: Partager le fardeau
 
 ------ Data ------
 TargetEN: you and the triggering ally
-TargetFR: 
+TargetFR: vous et l'allié déclencheur
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally within 30 feet is about to attempt a saving throw against a harmful emotion effect, and you would not otherwise have to save against the effect.</p>
 <hr />
