--- a/data/spells/abjuration-06-USM530HlzZ1RMd99.htm
+++ b/data/spells/abjuration-06-USM530HlzZ1RMd99.htm
@@ -7,7 +7,7 @@ Nom: Sacrifice du Champion
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 ally
-TargetFR: 
+TargetFR: 1 allié
 ------ Description (en) ------
 <p><strong>Trigger</strong> An ally is hit by a Strike, or an ally fails a saving throw against an effect that doesn't affect you.</p>
 <hr />
