--- a/data/spells/conjuration-06-c3XygMbzrZMgV1y3.htm
+++ b/data/spells/conjuration-06-c3XygMbzrZMgV1y3.htm
@@ -5,7 +5,7 @@ Nom: Transposition collective
 
 ------ Data ------
 AreasizeEN: 30-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m
 TargetEN: up to 2 creatures
 TargetFR: 
 ------ Description (en) ------
