--- a/data/spells/divination-04-AnWCohzPgK4L9GVl.htm
+++ b/data/spells/divination-04-AnWCohzPgK4L9GVl.htm
@@ -5,7 +5,7 @@ Nom: Détection de la scrutation
 
 ------ Data ------
 AreasizeEN: 30-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m
 ------ Description (en) ------
 <p>By tapping into trace divinatory auras, you detect the presence of scrying effects in the area. If detect scrying is higher level than a scrying effect, you gain a glimpse of the scrying creature and learn its approximate distance and direction.</p>
 <hr />
