--- a/data/spells/enchantment-01-IAjvwqgiDr3qGYxY.htm
+++ b/data/spells/enchantment-01-IAjvwqgiDr3qGYxY.htm
@@ -5,7 +5,7 @@ Nom: Inspiration vaillante
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p>You inspire yourself and your allies with words or tunes of encouragement. You and all allies in the area gain a +1 status bonus to attack rolls, damage rolls, and saves against fear effects.</p>
 <p>@Compendium[pf2e.spell-effects.beReeFroAx24hj83]{Spell Effect: Inspire Courage}</p>
