--- a/data/spells/enchantment-01-WILXkjU5Yq3yw10r.htm
+++ b/data/spells/enchantment-01-WILXkjU5Yq3yw10r.htm
@@ -5,7 +5,7 @@ Nom: Contre-représentation
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p><strong>Trigger</strong> You or an ally within 60 feet rolls a saving throw against an auditory or visual effect.</p>
 <hr />
