--- a/data/spells/enchantment-01-YGRpHU5yxw73mls8.htm
+++ b/data/spells/enchantment-01-YGRpHU5yxw73mls8.htm
@@ -7,7 +7,7 @@ Nom: Paroles apaisantes
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 ally
-TargetFR: 
+TargetFR: 1 allié
 ------ Description (en) ------
 <p>You attempt to calm the target by uttering soothing words in a calm and even tone. The target gains a +1 status bonus to Will saving throws. This bonus increases to +2 against emotion effects.</p>
 <p>@Compendium[pf2e.spell-effects.an4yZ6dyIDOFa1wa]{Spell Effect: Soothing Words}</p>
