--- a/data/spells/enchantment-03-1xLVcA8Y1onw7toT.htm
+++ b/data/spells/enchantment-03-1xLVcA8Y1onw7toT.htm
@@ -5,7 +5,7 @@ Nom: Chant funeste
 
 ------ Data ------
 AreasizeEN: 30-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m
 ------ Description (en) ------
 <p>Foes within the area are @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened 1}. They can't reduce their Frightened value below 1 while they remain in the area.</p>
 ------ Description (fr) ------
