--- a/data/spells/enchantment-03-LTUaK3smfm5eDiFK.htm
+++ b/data/spells/enchantment-03-LTUaK3smfm5eDiFK.htm
@@ -5,7 +5,7 @@ Nom: Chanson de marche
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p>You maintain a brisk performance that keeps allies on the move. You and your allies in the area can @Compendium[pf2e.actionspf2e.JuqmIAnkL9hVGai8]{Hustle} for the spell's duration, even though you are also @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Sustaining the Spell}. You and your allies then become temporarily immune for 1 day.</p>
 <hr />
