--- a/data/spells/enchantment-04-FSu6ZKxr3xdS75wq.htm
+++ b/data/spells/enchantment-04-FSu6ZKxr3xdS75wq.htm
@@ -5,7 +5,7 @@ Nom: Rugissement du Ver
 
 ------ Data ------
 AreasizeEN: 30-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m
 ------ Description (en) ------
 <p>You channel the might of dragons into your voice, letting out a roar that engenders respect in dragonkind but that instills fear in most other creatures.</p>
 <p>The impressive roar grants you a @Compendium[pf2e.spell-effects.0s6YaL3IjqECmjab]{+2 circumstance bonus to Diplomacy checks} for 10 minutes against dragons that were in the area at the time of casting. All enemies within the area other than dragons must attempt a Will save; to these enemies, <em>roar of the wyrm</em> is a fear effect.</p>
