--- a/data/spells/enchantment-04-I8CPe9Pp7GABqOyB.htm
+++ b/data/spells/enchantment-04-I8CPe9Pp7GABqOyB.htm
@@ -7,7 +7,7 @@ Nom: Zèle au combat
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: you and the triggering ally
-TargetFR: 
+TargetFR: vous et l'allié déclencheur
 ------ Description (en) ------
 <p><strong>Trigger</strong> You and at least 1 ally are about to roll initiative.</p>
 <hr />
