--- a/data/spells/enchantment-04-KPGGkyBFbKse7KpK.htm
+++ b/data/spells/enchantment-04-KPGGkyBFbKse7KpK.htm
@@ -5,7 +5,7 @@ Nom: Aura effroyable
 
 ------ Data ------
 AreasizeEN: 30-foot-radius emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m de rayon
 ------ Description (en) ------
 <p>You emit an aura of terror. Foes in the area are @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened 1} and unable to reduce the condition.</p>
 ------ Description (fr) ------
