--- a/data/spells/enchantment-05-BilnTGuXrof9Dt9D.htm
+++ b/data/spells/enchantment-05-BilnTGuXrof9Dt9D.htm
@@ -5,7 +5,7 @@ Nom: Pulsation synaptique
 
 ------ Data ------
 AreasizeEN: 30-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 9 m
 RangeEN: 30 feet
 RangeFR: 9 m
 ------ Description (en) ------
