--- a/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
+++ b/data/spells/enchantment-06-NhGXgmI3AjkkwnPk.htm
@@ -7,7 +7,7 @@ Nom: Furie aveuglante
 RangeEN: 60 feet
 RangeFR: 18 m 
 MaterialEN: A creature damages you
-MaterialFR: 
+MaterialFR: Une créature vous cause des dégats
 TargetEN: the triggering creature
 TargetFR: la créature déclencheuse
 ------ Description (en) ------
