--- a/data/spells/enchantment-07-Vw2CNwlRRKABsuZi.htm
+++ b/data/spells/enchantment-07-Vw2CNwlRRKABsuZi.htm
@@ -5,7 +5,7 @@ Nom: Yeux enchanteurs
 
 ------ Data ------
 AreasizeEN: 30-foot emanation centered on you
-AreasizeFR: 
+AreasizeFR: émanation de 9 m centrée sur vous
 ------ Description (en) ------
 <p>Your eyes glow with an entrancing radiance that captivates those who meet your gaze. Any creature that ends its turn within the emanation must attempt a Will save.</p>
 <hr />
