--- a/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
+++ b/data/spells/enchantment-09-Tc5NLaMu71vrGTJQ.htm
@@ -5,7 +5,7 @@ Nom: Hostilité naturelle
 
 ------ Data ------
 AreasizeEN: 500-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 150 m
 RangeEN: 120 feet
 RangeFR: 36 m
 TargetEN: up to 5 creatures
