--- a/data/spells/abjuration-01-xM35hJacTM1BSXUl.htm
+++ b/data/spells/abjuration-01-xM35hJacTM1BSXUl.htm
@@ -5,7 +5,7 @@ Nom: Refrain d'argent
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p><span>The "Song of Silver" was an enchanted song used by the Silver Ravens to battle diabolic forces. You pull from select verses to temporarily replicate some of the legendary song's benefits, albeit on a much smaller scale.<br /></span></p>
 <p><span>Weapon and unarmed attacks by allies in the area are treated as silver. In addition, this spell automatically attempts to counteract any @Compendium[pf2e.spells-srd.VlNcjmYyu95vOUe8]{Dimension Door} cast by a devil within the area or cast by a devil attempting to enter the area using <em>dimension door</em>. If a devil attempts to enter the area using <em>dimension door</em> and the spell is counteracted, the devil remains where it started.</span></p>
