--- a/data/spells/enchantment-01-f0Z5mqGA6Yu79B8x.htm
+++ b/data/spells/enchantment-01-f0Z5mqGA6Yu79B8x.htm
@@ -7,7 +7,7 @@ Nom: Inspiration talentueuse
 RangeEN: 60 feet
 RangeFR: 18 m 
 TargetEN: 1 ally
-TargetFR: 
+TargetFR: 1 allié
 ------ Description (en) ------
 <p>Your encouragement inspires your ally to succeed at a task. This counts as having taken sufficient preparatory actions to Aid your ally on a skill check of your choice, regardless of the circumstances. When you later use the Aid reaction, you can roll Performance instead of the normal skill check, and if you roll a failure, you get a success instead. If you are legendary in Performance, you automatically critically succeed.</p>
 <p>The GM might rule that you can't use this ability if the act of encouraging your ally would interfere with the skill check (such as a check to Sneak quietly or maintain a disguise).</p>
