--- a/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
+++ b/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
@@ -9,7 +9,7 @@ RangeFR: 3 m
 TargetEN: 1 creature of a level no greater than double the inveigle ritual's level
 TargetFR: 
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes (expert), Occultisme (expert) ou Religion (expert)
 ------ Description (en) ------
 <p>You win over the target's mind, causing it to see you as a close and trusted friend and look upon your every suggestion as reasonable. The target is helpful toward you, so it will go out of its way to help you. As with any other helpful creature, there are limits to what you can ask of it. If you ever ask the target to do something completely against its nature or needlessly harmful to the target or its interests, not only does it refuse, but it also can attempt a Will save to end the effect early. Because of the casting time and range, it's generally difficult to cast this ritual unless the target is willing (perhaps convinced the ritual will have some other effect) or restrained. If the creature is unwilling to accept the ritual, it can attempt a Will save to negate the effect.</p>
 <hr />
