--- a/data/spells/enchantment-02-bH0kPuf7UKxRvi2P.htm
+++ b/data/spells/enchantment-02-bH0kPuf7UKxRvi2P.htm
@@ -5,7 +5,7 @@ Nom: Inspiration défensive
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p>You inspire yourself and your allies to protect themselves more effectively. You and all allies in the area gain a +1 status bonus to AC and saving throws, as well as resistance equal to half the spell's level to physical damage.</p>
 <p>@Compendium[pf2e.spell-effects.DLwTvjjnqs2sNGuG]{Spell Effect: Inspire Defense}</p>
