--- a/data/spells/enchantment-02-c8R2fpk88fBwJ1ie.htm
+++ b/data/spells/enchantment-02-c8R2fpk88fBwJ1ie.htm
@@ -5,7 +5,7 @@ Nom: À trois temps
 
 ------ Data ------
 AreasizeEN: 60-foot emanation
-AreasizeFR: 
+AreasizeFR: émanation de 18 m
 ------ Description (en) ------
 <p>You dance at a lively tempo, speeding your allies' movement. You and all allies in the area gain a +10-foot status bonus to all Speeds for 1 round.</p>
 ------ Description (fr) ------
