--- a/data/spells/enchantment-03-qhJfRnkCRrMI4G1O.htm
+++ b/data/spells/enchantment-03-qhJfRnkCRrMI4G1O.htm
@@ -1,13 +1,12 @@
 Name: Aberrant Whispers
 Nom: Murmures aberrants
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: 5-foot emanation or more
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m ou plus
 TargetEN: each foe in the area
-TargetFR: 
+TargetFR: chaque ennemi dans la zone
 ------ Description (en) ------
 <p>You utter phrases in an unknown tongue, assaulting the minds of those nearby. Each target must attempt a Will save. Regardless of the result of its save, each target is then temporarily immune for 1 minute.</p>
 <p>You can increase the number of actions it takes to Cast the Spell (to a maximum of 3 actions total). For each additional action, increase the emanation's radius by 5 feet, to a maximum of 10 extra feet for 3 actions.</p>
