--- a/data/spells/enchantment-04-eCniO6INHNfc9Svr.htm
+++ b/data/spells/enchantment-04-eCniO6INHNfc9Svr.htm
@@ -5,7 +5,7 @@ Nom: Chagrins débordants
 
 ------ Data ------
 AreasizeEN: 15-foot emanation, centered on you
-AreasizeFR: 
+AreasizeFR: émanation de 4,5 m centrée sur vous
 ------ Description (en) ------
 <p>Sadness flows out of you into nearby creatures, blotting out any other thoughts they had. The first time a creature begins its turn in the area or enters the area, it must attempt a Will save. If it later leaves and reenters the area, it uses the same effect as before.</p>
 <hr />
