--- a/data/spells/enchantment-07-0JigNJDRwevZOyjI.htm
+++ b/data/spells/enchantment-07-0JigNJDRwevZOyjI.htm
@@ -7,7 +7,7 @@ Nom: Ballade apaisante
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: you and up to 9 allies
-TargetFR: 
+TargetFR: vous et jusqu'à 9 alliés
 ------ Description (en) ------
 <p><span>You draw upon your muse to soothe your allies. Choose one of the following three effects: </span></p>
 <ul>
