--- a/data/spells/enchantment-07-IQchIYUwbsVTa9Mc.htm
+++ b/data/spells/enchantment-07-IQchIYUwbsVTa9Mc.htm
@@ -7,7 +7,7 @@ Nom: Allégro
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 ally
-TargetFR: 
+TargetFR: 1 allié
 ------ Description (en) ------
 <p>You perform rapidly, speeding up your ally. The ally becomes @Compendium[pf2e.conditionitems.nlCjDvLMf2EkV2dl]{Quickened} and can use the additional action to Strike, Stride, or Step.</p>
 ------ Description (fr) ------
