--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -11,7 +11,7 @@ TargetFR: 1 créature morte
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
-PrimaryCheckFR: Arcanes (expert), Occultisme (expert) ou Religion (expert)
+PrimaryCheckFR: Arcanes (expert), Occultisme (expert) ou Religion (expert)Arcanes (expert), Occultisme (expert) ou Religion (expert)
 SecondaryCheckEN: Religion
 SecondaryCheckFR: religion
 ------ Description (en) ------
