champs non traduits

--- a/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
+++ b/data/spells/abjuration-08-4ddJSjC9Zz5DX0oG.htm
@@ -5,7 +5,7 @@ Nom: Liberté
 
 ------ Data ------
 RangeEN: see text
-RangeFR: 
+RangeFR: voir texte
 TargetEN: 1 creature
 TargetFR: 1 créature
 SecondaryCasterEN: 02
