--- a/data/spells/divination-01-5Pc55FGGqVpIAJ62.htm
+++ b/data/spells/divination-01-5Pc55FGGqVpIAJ62.htm
@@ -7,7 +7,7 @@ Nom: Étude du maître savant
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: you or the triggering ally
-TargetFR: 
+TargetFR: vous et l'allié déclencheur
 ------ Description (en) ------
 <p><strong>Trigger</strong> You or an ally within range attempts a skill check to Recall Knowledge.</p>
 <hr />
