--- a/data/spells/divination-01-8bdt1TvNKzsCu9Ct.htm
+++ b/data/spells/divination-01-8bdt1TvNKzsCu9Ct.htm
@@ -1,13 +1,12 @@
 Name: Join Pasts
 Nom: Joindre les passés
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: touch
 RangeFR: contact
 TargetEN: 2 willing creatures
-TargetFR: 
+TargetFR: 2 créatures volontaires
 ------ Description (en) ------
 <p>With touches to the targets' foreheads, you bring them into mental communion. The targets can share thoughts and experiences, but not words. When one target attempts to Recall Knowledge, the other can Aid the first target's skill check, using any Lore skill (even if that Lore wouldn't normally apply) without having made any preparations to Aid.</p>
 <hr />
