--- a/data/spells/divination-02-NhNKzq1DvFxkvTEc.htm
+++ b/data/spells/divination-02-NhNKzq1DvFxkvTEc.htm
@@ -1,7 +1,6 @@
 Name: Vision of Weakness
 Nom: Vision de faiblesse
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 TargetEN: 1 creature
