--- a/data/spells/divination-05-9BnhadUO8FMLmeZ3.htm
+++ b/data/spells/divination-05-9BnhadUO8FMLmeZ3.htm
@@ -1,7 +1,6 @@
 Name: Mind Probe
 Nom: Sonde mentale
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 30 feet
