--- a/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
+++ b/data/spells/divination-06-B4dDkYsHFo1H0CIF.htm
@@ -7,13 +7,13 @@ Nom: Éveil d’animal
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 animal up to the level on Table 7-1
-TargetFR: 
+TargetFR: 1 animal d'un niveau maximum correspondant à la table
 SecondaryCasterEN: 03
 SecondaryCasterFR: 3
 PrimaryCheckEN: Nature (master)
 PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Lore (any), Society, Survival
-SecondaryCheckFR: 
+SecondaryCheckFR: Connaissance (toutes), Société, Survie
 ------ Description (en) ------
 <p>You grant intelligence to the target, transforming it into a beast. If it was previously an animal companion or minion, it can no longer serve as one.</p>
 <h2>Table 7-1: Creatures Creation Rituals</h2>
