--- a/data/spells/divination-06-l4LFwY7iuzX6sDXr.htm
+++ b/data/spells/divination-06-l4LFwY7iuzX6sDXr.htm
@@ -7,9 +7,9 @@ Nom: Communion avec la nature
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Nature (master
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature (maître)
 SecondaryCheckEN: Nature
-SecondaryCheckFR: 
+SecondaryCheckFR: Nature
 ------ Description (en) ------
 <p><span>As @Compendium[pf2e.spells-srd.7DN13ILADW2N9Z1t]{Commune}, except you contact the primal spirits of nature, which know about animals, beasts, fey, plants, topography, and natural resources within a 3-mile radius of the ritual's location.</span></p>
 ------ Description (fr) ------
