--- a/data/spells/enchantment-01-GdN5YQE47gd79k7X.htm
+++ b/data/spells/enchantment-01-GdN5YQE47gd79k7X.htm
@@ -7,7 +7,7 @@ Nom: Paroles sauvages
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 animal, fungus, or plant
-TargetFR: 
+TargetFR: 1 animal, champignon ou plante
 ------ Description (en) ------
 <p>With a few words, you convince a wild creature you are a kindred spirit, making it reluctant to harm you. The target must attempt a Will save. Regardless of the outcome, the target is then temporarily immune for 1 minute.</p>
 <hr />
