--- a/data/spells/enchantment-01-aEitTTb9PnOyidRf.htm
+++ b/data/spells/enchantment-01-aEitTTb9PnOyidRf.htm
@@ -7,7 +7,7 @@ Nom: Aiguille de la vengeance
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 enemy
-TargetFR: 
+TargetFR: 1 ennemi
 ------ Description (en) ------
 <p>A long, jagged needle jabs into the target foe's psyche whenever it tries to attack a specifically forbidden creature. Name yourself or one of your allies. The target takes [[/r 2 #mental]] mental damage any time it uses a hostile action against the named creature.</p>
 <hr />
