--- a/data/spells/enchantment-01-ut9IhJ9jSZSHDUop.htm
+++ b/data/spells/enchantment-01-ut9IhJ9jSZSHDUop.htm
@@ -7,7 +7,7 @@ Nom: Contact charmeur
 RangeEN: touch
 RangeFR: contact
 TargetEN: 1 creature that could find you attractive
-TargetFR: 
+TargetFR: 1 créature qui pourrait vous trouver attirant
 ------ Description (en) ------
 <p>You infuse your target with attraction, causing it to act friendlier toward you. The target attempts a Will save. It gains a +4 circumstance bonus to this save if you or your allies recently threatened or were hostile to it. You can Dismiss the spell. If you use hostile actions against the target, the spell ends. After the spell ends, the target doesn't necessarily realize it was charmed unless its friendship with you or the actions you convinced it to take clash with its expectations, which could potentially allow you to convince the target to continue being your friend via mundane means.</p>
 <hr />
