--- a/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
+++ b/data/spells/enchantment-02-5pwK2FZX6QwgtfqX.htm
@@ -7,7 +7,7 @@ Nom: Envoûtement
 RangeEN: 10 feet
 RangeFR: 3 m
 TargetEN: 1 creature of a level no greater than double the inveigle ritual's level
-TargetFR: 
+TargetFR: 1 créature d'un niveau pas supérieur au double du niveau du rituel d'Envoûtement
 PrimaryCheckEN: Arcana (expert), Occultism (expert), or Religion (expert)
 PrimaryCheckFR: Arcanes (expert), Occultisme (expert) ou Religion (expert)
 ------ Description (en) ------
