--- a/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
+++ b/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
@@ -7,7 +7,7 @@ Nom: Porte vers l'au-delà
 AreasizeEN: 20-foot emanation
 AreasizeFR: émanation de 6 m
 RangeEN: 5 feet
-RangeFR: 
+RangeFR: 1,5 m
 ------ Description (en) ------
 <p><span>Striking at thin air, you create hairline cracks in an unoccupied adjacent space that lead somewhere outside reality. Air rushes through the cracks, drawing Large or smaller creatures and objects of light Bulk or less toward the center. Large or smaller creatures in the area must attempt a Fortitude save at the start of their turn; creatures that move into the area must attempt the save on entering.<br /></span></p>
 <p>The cracks of the door to beyond are too thin for anything to fully slip through, but decompressive effects deal 4d6 slashing damage to any creature or object that ends its turn in the door's space. You are unaffected by your own <em>door to beyond</em>. You can Dismiss the spell.</p>
