--- a/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
+++ b/data/spells/conjuration-07-5ZW1w9f4gWlSIuWA.htm
@@ -9,7 +9,7 @@ RangeFR: 6 m
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (maître)
 SecondaryCheckEN: Crafting, Survival
 SecondaryCheckFR: 
 ------ Description (en) ------
