--- a/data/spells/divination-01-3mINzPzup2m9qzFU.htm
+++ b/data/spells/divination-01-3mINzPzup2m9qzFU.htm
@@ -5,9 +5,9 @@ Nom: Masque sépucral
 
 ------ Data ------
 AreasizeEN: 5-foot amanation
-AreasizeFR: 
+AreasizeFR: émanation de 1,5 m
 TargetEN: enemies in area
-TargetFR: 
+TargetFR: ennemis dans la zone
 ------ Description (en) ------
 <p>You manifest a supernatural funerary mask, granting you a +1 status bonus to Will saving throws against emotion effects for 1 minute. Its somber countenance forces your foes to confront their regrets and sins. Each enemy in the area when you @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast the Spell} or that starts its turn in the area takes [[/r 1d4 #mental]] mental damage and must attempt a Will save.</p>
 <hr />
