--- a/data/spells/divination-01-RztmhJrLLQWoGVdB.htm
+++ b/data/spells/divination-01-RztmhJrLLQWoGVdB.htm
@@ -1,11 +1,10 @@
 Name: Object Memory
 Nom: Mémoire de l'objet
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 TargetEN: 1 weapon or tool
-TargetFR: 
+TargetFR: 1 arme ou 1 outil
 ------ Description (en) ------
 <p>By touching an object, you draw forth the experience of those who created and used it.</p>
 <p>If you touch a weapon, your proficiency rank with that weapon temporarily increases to trained (if it is not already higher).</p>
@@ -17,4 +16,4 @@ TargetFR:
 <p>Si vous touchez une arme, vous devenez temporairement qualifié avec cette arme (si votre rang de maîtrise n'était pas déjà supérieur). Si vous touchez un outil, votre rang de maîtrise avec le prochain test de compétence que vous tentez avec cet outil au cours de la durée du sort (tel qu'un test de Fabrication avec le marteau d'un forgeron) passe temporairement à qualifié (si votre rang de maîtrise n'était pas déjà supérieur). Ce sort ne donne aucun avantage pour les activités qui prennent plus de temps qu'une minute pour être achevées.</p>
 <hr />
 <p><strong>Intensifié (6e)</strong> Votre rang de maîtrise passe à expert au lieu de qualifié.</p>
-<p>@Compendium[pf2e.spell-effects.uDOxq24S7IT2EcXv]{Effet : Mémoire de l'objet (arme ou outil)}</p>
+<p>@Compendium[pf2e.spell-effects.uDOxq24S7IT2EcXv]{Effet : Mémoire de l'objet (arme)}</p>
