--- a/data/spells/divination-01-nXmC2Xx9WmS5NsAo.htm
+++ b/data/spells/divination-01-nXmC2Xx9WmS5NsAo.htm
@@ -1,13 +1,12 @@
 Name: Share Lore
 Nom: Connaissance partagée
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: touch
 RangeFR: contact
 TargetEN: up to 3 creatures
-TargetFR: 
+TargetFR: jusqu'à 3 créatures
 ------ Description (en) ------
 <p><span>You share your knowledge with the touched creatures. Choose one Lore skill in which you are trained. The targets become trained in that Lore skill for the duration of the spell.</span></p>
 <hr />
