--- a/data/spells/divination-02-ou56ShiFH7GWF8hX.htm
+++ b/data/spells/divination-02-ou56ShiFH7GWF8hX.htm
@@ -5,7 +5,7 @@ Nom: Lumière de révélation
 
 ------ Data ------
 RangeEN: 30-foot emanation
-RangeFR: 
+RangeFR: émanation de 9 m
 ------ Description (en) ------
 <p><span>You shed a luminous aura, illuminating a 30-foot radius with bright light. You and all allies in this area gain a +1 status bonus to Perception checks to detect @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} or @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Undetected} creatures, as well as Hidden objects, doors, and other features. </span></p>
 ------ Description (fr) ------
