--- a/data/spells/divination-02-pZTqGY1MLRjgKasV.htm
+++ b/data/spells/divination-02-pZTqGY1MLRjgKasV.htm
@@ -1,7 +1,6 @@
 Name: Darkvision
 Nom: Vision dans le noir
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You grant yourself supernatural sight in areas of darkness. You gain Darkvision.</p>
@@ -12,6 +11,6 @@ Nom: Vision dans le noir
 <p><strong>Heightened (5th)</strong> The spell's range is touch and it targets 1 willing creature. The duration is until the next time you make your daily preparations.</p>
 ------ Description (fr) ------
 <p>Vous vous dotez d’une vision surnaturelle dans les zones de ténèbres. Vous gagnez vision dans le noir.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (3e)</strong> La portée du sort devient contact et il cible une créature consentante.</p>
 <p><strong>Intensifié (5e)</strong> La portée du sort devient contact et il cible une créature consentante. Le sort dure jusqu’à vos prochains préparatifs quotidiens.</p>
