--- a/data/spells/divination-04-ivKnEtI1z4UqEKIA.htm
+++ b/data/spells/divination-04-ivKnEtI1z4UqEKIA.htm
@@ -1,11 +1,10 @@
 Name: Pulse of the City
 Nom: Pouls de la ville
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 25 miles
-RangeFR: 
+RangeFR: 37,5 km
 ------ Description (en) ------
 <p><span>You tap into the zeitgeist of the nearest settlement in range (if any). You learn the name of the settlement, and you can utter a special word to learn a brief summary of one significant event happening in the settlement. Choose one of the following words, which indicates the type of people involved and type of event you learn about. </span></p>
 <ul>
