--- a/data/spells/divination-05-4Cntq9odgW6xMpAs.htm
+++ b/data/spells/divination-05-4Cntq9odgW6xMpAs.htm
@@ -7,13 +7,13 @@ Nom: Projection astrale
 RangeEN: touch
 RangeFR: contact
 TargetEN: yourself and up to 5 willing creatures
-TargetFR: 
+TargetFR: vous-même et jusqu'à 5 créatures volontaires
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (master)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (maître)
 SecondaryCheckEN: Arcana or Occultism (whichever isn't used for the  primary check), Survival
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes ou Occultisme (celui qui n'est pas utilisé pour le test primaire), Survie
 ------ Description (en) ------
 <p>You project the targets' spiritual essences into the Astral Plane, leaving their inanimate physical forms behind. These astral forms can be used to explore the Astral Plane indefinitely, while the targets' bodies remain safely in stasis on the plane where the ritual was cast (where they remain unconscious and can't be awoken normally). The casters must be in physical contact with one another in a circle for the duration of the casting, and all targets must be selected from these casters.</p>
 <p>A target's astral form is a duplicate of the target and everything they're carrying; anything that happens to a duplicate item happens to the original as well. For instance, if you use, spend, destroy, lose, or give away an item's duplicate, the original vanishes from your possession. For the duration of the ritual, any of the targets can spend a single action to @Compendium[pf2e.actionspf2e.AjLSHZSWQ90exdLo]{Dismiss} their astral form and immediately return to their physical body. As the primary caster, when you Dismiss your astral form, you can also Dismiss all the other targets' astral forms as part of the same action, returning all targets to their physical forms simultaneously. While in the Astral Plane, the other targets are unable to navigate without you, and if they become separated from you, they must wait for your return or Dismiss their own astral forms. When the ritual ends, the targets' astral forms vanish.</p>
@@ -33,4 +33,4 @@ SecondaryCheckFR:
 <p><strong>Succès critique</strong> Toutes les cibles sont capables de naviguer indépendamment dans le Plan astral. Chacune des cordes argentées est plus robuste que d'ordinaire, leur procurant un bonus de circonstances de +4 à leur jet de Vigueur pour éviter de mourir si leur forme astrale meurt.</p>
 <p><strong>Succès</strong> Vous réussissez à projeter les cibles.</p>
 <p><strong>Échec</strong> Vous ne parvenez pas à projeter les cibles.</p>
-<p><strong>Échec critique</strong> Le processus de séparation des esprits des cibles de leurs corps est compliqué et quelque chose se passe catastrophiquement mal. Tous les incantateurs deviennent Condamnés 1, sont imméditament réduits à 0 Points de vie et deviennent @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourants}.</p>
+<p><strong>Échec critique</strong> Le processus de séparation des esprits des cibles de leurs corps est compliqué et quelque chose se passe catastrophiquement mal. Tous les incantateurs deviennent Condamnés 1, sont immédiatement réduits à 0 Points de vie et deviennent @Compendium[pf2e.conditionitems.yZRUzMqrMmfLu0V1]{Mourants}.</p>
