--- a/data/spells/divination-05-R9xqCBblkS5KE4y7.htm
+++ b/data/spells/divination-05-R9xqCBblkS5KE4y7.htm
@@ -1,13 +1,12 @@
 Name: Sending
 Nom: Communication à distance
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: planetary
 RangeFR:  planétaire
 TargetEN: 1 creature with whom you are familiar
-TargetFR: 
+TargetFR: 1 créature avec laquelle vous êtes familier
 ------ Description (en) ------
 <p>You send the creature a mental message of 25 words or fewer, and it can respond immediately with its own message of 25 words or fewer.</p>
 ------ Description (fr) ------
