--- a/data/spells/divination-05-gfVXAW95YWRz0pJC.htm
+++ b/data/spells/divination-05-gfVXAW95YWRz0pJC.htm
@@ -1,13 +1,12 @@
 Name: Telepathic Bond
 Nom: Lien télépathique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: touch
 RangeFR: contact
 TargetEN: you and up to 4 willing creatures touched
-TargetFR: 
+TargetFR: vous et jusqu'à 4 créatures volontaires en contact
 ------ Description (en) ------
 <p>The targets can communicate telepathically with any or all of the other targets from any point on the same planet.</p>
 ------ Description (fr) ------
