--- a/data/spells/divination-05-tj86Rnq3QuQnDtG3.htm
+++ b/data/spells/divination-05-tj86Rnq3QuQnDtG3.htm
@@ -7,7 +7,7 @@ Nom: Vision du chasseur
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 hunted prey
-TargetFR: 
+TargetFR: 1 proie chassée
 ------ Description (en) ------
 <p><span>Your target glows with a magical aura visible only to you and those who follow your lead. Your target is visible to you and others sharing your @Compendium[pf2e.classfeatures.0nIOGpHQNHsKSFKT]{Hunt Prey} benefits even if it wouldn't normally be due to lighting or the @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} or @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{Invisible} conditions, though cover from opaque objects still blocks your sight. You ignore the flat check against the target due to the Concealed condition, and the target isn't automatically @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} from you due to darkness or being Invisible.</span></p>
 ------ Description (fr) ------
