--- a/data/spells/enchantment-01-T90ij2uu6ZaBaSXV.htm
+++ b/data/spells/enchantment-01-T90ij2uu6ZaBaSXV.htm
@@ -5,7 +5,7 @@ Nom: Lamentation
 
 ------ Data ------
 RangeEN: 30-foot cone
-RangeFR: 
+RangeFR: cône de 9 m
 TargetEN: 1 or more creatures
 TargetFR: 1 créature ou plus
 ------ Description (en) ------
@@ -13,6 +13,6 @@ TargetFR: 1 créature ou plus
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 1d8.</p>
 ------ Description (fr) ------
-<p>Vous relâchez toutes les émotions négatives dans un gémissement guttural qui secour les cœurs de vos ennemis et leur inflige 1d8 dégâts mentaux (jet de Volonté basique). Si vous avez n'importe quelle condition néfaste imposée par un effet d'émotion, <em>lamentation</em> infligent des dégâts supplémentaires égaux au niveau de contre de l'effet du plus haut niveau.</p>
+<p>Vous relâchez toutes les émotions négatives dans un gémissement guttural qui secoue les cœurs de vos ennemis et leur inflige 1d8 dégâts mentaux (jet de Volonté basique). Si vous avez n'importe quelle condition néfaste imposée par un effet d'émotion, <em>lamentation</em> inflige des dégâts supplémentaires égaux au niveau de contre de l'effet du plus haut niveau.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d8.</p>
