--- a/data/spells/enchantment-01-XSujb7EsSwKl19Uu.htm
+++ b/data/spells/enchantment-01-XSujb7EsSwKl19Uu.htm
@@ -7,7 +7,7 @@ Nom: Bénédiction
 AreasizeEN: 5-foot emanation
 AreasizeFR: émanation de 1,5 m
 TargetEN: you and allies in the area
-TargetFR: 
+TargetFR: vous et les alliés dans la zone
 ------ Description (en) ------
 <p>Blessings from beyond help your companions strike true. You and your allies gain a +1 status bonus to attack rolls while within the emanation. Once per turn, starting the turn after you cast bless, you can use a single action, which has the concentrate trait, to increase the emanation's radius by 5 feet. Bless can counteract bane.</p>
 <p>@Compendium[pf2e.spell-effects.Gqy7K6FnbLtwGpud]{Spell Effect: Bless}</p>
