--- a/data/spells/enchantment-02-hoR6w8BqX2F35Tdx.htm
+++ b/data/spells/enchantment-02-hoR6w8BqX2F35Tdx.htm
@@ -1,5 +1,5 @@
 Name: Blistering Invective
-Nom: Invective torrides
+Nom: Invectives torrides
 État: changé
 État d'origine: libre
 
@@ -7,7 +7,7 @@ Nom: Invective torrides
 RangeEN: 30 feet
 RangeFR: 9 m
 TargetEN: 1 creature (Heightened (+2) - two additional creatures)
-TargetFR: 
+TargetFR: 1 créature (Intensifié (+2) - deux créatures supplémentaires)
 ------ Description (en) ------
 <p>A heap of insults and invectives spew from your mouth-words so devastating your foes burn from the intensity of your diatribe. Your words deal [[/r 2d6 #persistent fire]] @Compendium[pf2e.conditionitems.lDVqvLKA6eF3Df60]{Persistent Fire Damage}, and the target must attempt a Will save. If the target doesn't understand the language or you're not speaking a language, it gains a +4 circumstance bonus to its save.</p>
 <hr />
