champs des sorts traduits

--- a/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
+++ b/data/spells/abjuration-06-pZc8ZwtsyWnxUUW0.htm
@@ -5,7 +5,7 @@ Nom: Appel primordial
 
 ------ Data ------
 RangeEN: 100 miles
-RangeFR: 
+RangeFR: 150 km
 TargetEN: 1 animal, beast, fey, fungus, or plant
 TargetFR: 
 SecondaryCasterEN: 04
