--- a/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
+++ b/data/spells/conjuration-07-nzbnTqHgNKiGZkrZ.htm
@@ -7,13 +7,13 @@ Nom: Mot de Rappel
 RangeEN: 20 feet
 RangeFR: 6 m
 TargetEN: Up to seven willing creatures of 14th  level or lower
-TargetFR: 
+TargetFR: jusqu'à sept créatures volontaires du niveau 14 ou inférieur
 SecondaryCasterEN: 02
 SecondaryCasterFR: 2
 PrimaryCheckEN: Arcana or Occultism (expert, the check has  the secret trait)
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes ou Occultisme (expert, le test possède le trait secret)
 SecondaryCheckEN: Arcana or Occultism  (whichever isn't used for the primary check), Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes ou Occultisme (celui qui n'a pas été utilisé pour le test primaire), Société
 ------ Description (en) ------
 <p>You bind yourself and your allies to the specific safe location where you perform the ritual. This allows the participants to return later by simply speaking a word.</p>
 <hr />
