--- a/data/spells/conjuration-08-ZwwIUavMbEwcZz35.htm
+++ b/data/spells/conjuration-08-ZwwIUavMbEwcZz35.htm
@@ -1,15 +1,14 @@
 Name: Create Demiplane
 Nom: Création de demi-plan
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 SecondaryCasterEN: 03
 SecondaryCasterFR: 3
 PrimaryCheckEN: Arcana, Nature, Occultism, or Religion  (legendary);
-PrimaryCheckFR: 
+PrimaryCheckFR: Arcanes, Nature, Occultisme ou Religion (legendary)
 SecondaryCheckEN: Arcana, Nature, Occultism,  Religion (whichever three aren't used for the primary check)
-SecondaryCheckFR: 
+SecondaryCheckFR: Arcanes, Nature, Occultisme, Religion (qui n'a pas été utilisé pour le test primaire)
 ------ Description (en) ------
 <p>Few incantations are as renowned as the power to create worlds. To cast this ritual, you must be on the Astral Plane, the Ethereal Plane, or a plane that connects to one of the two.</p>
 <p>A demiplane created with this ritual exists on the Astral or Ethereal Plane. It can have the appearance of any mundane environment or structure, such as a glorious cathedral, a clearing in a forest, a comfortably furnished cavern, or anything else one can imagine. All demiplanes have finite, unbreachable boundaries, which might resemble stone, wood, or something more unnatural, such as a wall of mist or unceasing void.</p>
