--- a/data/spells/conjuration-09-KPDHmmjJiw7PhTYF.htm
+++ b/data/spells/conjuration-09-KPDHmmjJiw7PhTYF.htm
@@ -1,7 +1,6 @@
 Name: Resplendent Mansion
 Nom: Manoir resplendissant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 RangeEN: 500 feet
