--- a/data/spells/conjuration-09-xxhS66k68u5iIOHC.htm
+++ b/data/spells/conjuration-09-xxhS66k68u5iIOHC.htm
@@ -1,11 +1,10 @@
 Name: Upheaval
 Nom: Soulèvement
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 AreasizeEN: 150-foot burst
-AreasizeFR: 
+AreasizeFR: explosion de 45 m
 RangeEN: 500 feet
 RangeFR: 150 m
 ------ Description (en) ------
