--- a/data/spells/conjuration-05-115Xp9E38CJENhNS.htm
+++ b/data/spells/conjuration-05-115Xp9E38CJENhNS.htm
@@ -1,11 +1,10 @@
 Name: Passwall
 Nom: Passe-muraille
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: 5-foot-wide, 10-foot-tall, 10-foot-deep section of wooden, plaster, or stone wall
-AreasizeFR: 
+AreasizeFR: 1,5 m de large, section de mur de 3 m de profondeur de bois, de plâtre ou de pierre
 RangeEN: touch
 RangeFR: contact
 ------ Description (en) ------
@@ -14,5 +13,5 @@ RangeFR: contact
 <p><strong>Heightened (7th)</strong> The tunnel can be up to 20 feet deep. The areas of the wall that contain your tunnel's entrance appear completely normal (unless viewed with true seeing or a similar effect), despite the tunnel's existence. The tunnel's entrance functions as a solid wall, but you can specify a password or a trigger, allowing creatures to enter the tunnel freely.</p>
 ------ Description (fr) ------
 <p>Vous créez un tunnel visible dans le mur situé dans la zone désignée, en remplaçant la zone par un espace vide. Si le mur fait plus de 3 mètres d’épaisseur, le tunnel termine en cul-de-sac au bout de 3 mètres. Même une fine couche de métal dans le mur empêche ce sort de fonctionner. Ce sort n’affaiblit pas l’intégrité de la structure. Quand il se termine, quiconque à l’intérieur du tunnel est immédiatement poussé vers la sortie la plus proche.</p>
-<hr>
-<p><strong>Intensifié (7e)</strong> Le tunnel peut atteindre une profondeur de 6 mètres. Les zones de mur contenant l’entrée de votre tunnel semblent complètement intactes (sauf si on la regarde en bénéficiant d’une vision lucide ou d’un effet similaire), malgré l’existence du tunnel. L’entrée du tunnel est ainsi considérée comme un mur compact, mais vous pouvez définir un mot de passe ou un déclencheur qui permet aux créatures d’entrer comme elles le souhaitent dans le tunnel</p>
+<hr />
+<p><strong>Intensifié (7e)</strong> Le tunnel peut atteindre une profondeur de 6 mètres. Les zones de mur contenant l’entrée de votre tunnel semblent complètement intactes (sauf si on la regarde en bénéficiant d’une Vision lucide ou d’un effet similaire), malgré l’existence du tunnel. L’entrée du tunnel est ainsi considérée comme un mur compact, mais vous pouvez définir un mot de passe ou un déclencheur qui permet aux créatures d’entrer comme elles le souhaitent dans le tunnel.</p>
