--- a/data/spells/conjuration-05-5ttAVJbWg2GVKmrN.htm
+++ b/data/spells/conjuration-05-5ttAVJbWg2GVKmrN.htm
@@ -1,13 +1,12 @@
 Name: Shadow Jump
 Nom: Saut de l'ombre
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Data ------
 RangeEN: 120 feet
 RangeFR: 36 m
 MaterialEN: You are in dim light or darkness
-MaterialFR: 
+MaterialFR: Vous êtes dans une lumière faible ou l'obscurité
 ------ Description (en) ------
 <p>You instantly transport yourself from one shadow to another. @Compendium[pf2e.spells-srd.69L70wKfGDY66Mk9]{Teleport} yourself and any items you're wearing and holding from your current space to a clear space you can see that's in dim light or darkness and within range. You can transport your familiar with this spell, but if shadow jump would bring any other creature with you-even if you're carrying the creature in an extradimensional container-the spell is disrupted.</p>
 <hr />
@@ -15,5 +14,5 @@ MaterialFR:
 ------ Description (fr) ------
 <p>Vous vous transportez instantanément d'une ombre à une autre.</p>
 <p>Vous lancez @Compendium[pf2e.spells-srd.69L70wKfGDY66Mk9]{Téléportation} sur vous et tout objet que vous êtes en train de manier ou que vous portez, de votre case actuelle à une case libre que vous pouvez voir qui se trouve dans la lumière faible ou dans l'obscurité et à portée. Vous pouvez transporter votre familier avec ce sort, mais si Saut de l'ombre devrait apporter n'importe quelle autre créature avec vous, même si vous transportez la créature dans un contenant extradimensionnel - le sort est interrompu.</p>
-<hr>
+<hr />
 <p><strong>Intensifié (8e)</strong> Lorsque vous parvenez à votre destination, vous pouvez devenir @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{Invisible} Jusqu'à la fin de votre prochain tour ou jusqu'à ce que vous ne soyez plus dans une zone de lumière faible ou d'obscurité, ce qui advient en premier. L'invisibilité est un effet d'illusion.</p>
