--- a/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
+++ b/data/spells/conjuration-05-yRf59eFtZ50cGlem.htm
@@ -9,9 +9,9 @@ RangeFR: 12 m
 SecondaryCasterEN: 01
 SecondaryCasterFR: 1
 PrimaryCheckEN: Nature, Religion, or Occultism (expert);
-PrimaryCheckFR: 
+PrimaryCheckFR: Nature, Religion ou Occultisme (expert)
 SecondaryCheckEN: Diplomacy or Society
-SecondaryCheckFR: 
+SecondaryCheckFR: Diplomatie ou Société
 ------ Description (en) ------
 <p>You conjure otherworldly beings to serve you and your companions a feast with restorative properties. These mysterious beings may be fey, divine, or other supernatural servitors, as appropriate for the primary check. After the first hour of the ritual, these servants appear and serve a massive feast, complete with an exquisite table and up to 10 place settings. The bounteous spread consists of all manner of dishes, including the guests' childhood comfort foods, modern delicacies, and preferred drinks. The summoned servants spend the next 3 hours waiting on you and the other guests, fetching additional food, pouring drinks, and so forth. During this time, you and the other guests must strive to be as polite and gracious as possible to avoid offending your mysterious hosts. At the feast's end, the ritual is completed and you and the secondary caster attempt your checks as normal. If the feast is interrupted at any point, the servants immediately vanish with their provisions and the ritual is disrupted.</p>
 <hr />
