--- a/data/spells/conjuration-08-oGV6YdpZLIG4G4gH.htm
+++ b/data/spells/conjuration-08-oGV6YdpZLIG4G4gH.htm
@@ -1,11 +1,10 @@
 Name: Impaling Briars
 Nom: Ronces empaleuses
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Data ------
 AreasizeEN: ground within a 100-foot emanation
-AreasizeFR: 
+AreasizeFR: sol au sein d'une émanation de 30 m
 ------ Description (en) ------
 <p>The ground within the area transforms into a mass of dangerous briars that assault and impede your foes. The first time you Sustain this Spell each round, you can select one of the following effects to occur in the area.</p>
 <ul>
